--- a/src/components/Home/Hero.astro
+++ b/src/components/Home/Hero.astro
@@ -1,6 +1,6 @@
 ---
-const { default: MeStanding } = await import("/src/svg/me-standing.svg?raw");
-const { default: MeSitting } = await import("/src/svg/me-sitting.svg?raw");
+const { default: MeStanding } = await import("/src/assets/me-standing.svg?raw");
+const { default: MeSitting } = await import("/src/assets/me-sitting.svg?raw");
 ---
 
 <hero
