--- a/src/components/Home/Blog/BlogCard.astro
+++ b/src/components/Home/Blog/BlogCard.astro
@@ -1,14 +1,22 @@
 ---
+import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 import LinkButton from "../../LinkButton.astro";
 
 export interface Props {
   title: string;
-  imageSrc?: string;
+  imagePath?: string;
   gradient: string;
 }
 
-const { title, imageSrc, gradient } = Astro.props;
+const { title, imagePath, gradient } = Astro.props;
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "/src/assets/**/*.{jpeg,jpg,png,gif}"
+);
+if (!images[imagePath])
+  throw new Error(
+    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+  );
 ---
 
 <article
@@ -21,9 +29,9 @@ const { title, imageSrc, gradient } = Astro.props;
     ]}
   >
     {
-      imageSrc && (
+      imagePath && (
         <Image
-          src={"/src/svg/projects/bee-watcher-logo.png"}
+          src={images[imagePath]()}
           alt={title}
           width={100}
           height={100}
