fix(images): :bug: fix previous error on projects images

--- a/src/components/Home/Project/ImageLogo.astro
+++ b/src/components/Home/Project/ImageLogo.astro
@@ -9,6 +9,13 @@ export interface Props {
 }
 
 const { src, alt, class: className, w, h } = Astro.props;
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "/src/assets/**/*.{jpeg,jpg,png,gif}"
+);
+if (!images[src])
+  throw new Error(
+    `"${src}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+  );
 ---
 
 <Image
