--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,7 +11,7 @@
         class="mr-5 h-full flex items-center shadow-background-900 transition-all hover:animate-jump"
       >
         <a
-          href="#"
+          href="/"
           class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 ml-2 md:ml-1 tracking-tighter"
           >TT</a
         >
