--- a/src/components/Home/Project/ImageLogo.astro
+++ b/src/components/Home/Project/ImageLogo.astro
@@ -27,4 +27,5 @@ if (!images[src])
     "bg-transparent rounded-full border-2 border-zinc-900 overflow-hidden",
     className,
   ]}
+  loading={"eager"}
 />
