--- a/src/components/Home/Technologies.astro
+++ b/src/components/Home/Technologies.astro
@@ -14,7 +14,7 @@ import TechBadge from "../TechBadge.astro";
   <div class="ml-4 mt-4 space-y-4">
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Frontend</h2>
-      <div class="flex ml-4 mt-2 flex-wrap" id="tech-kind">
+      <div class="flex mx-4 my-2 space-x-5 flex-wrap" id="tech-kind">
         <TechBadge
           fromToVia="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600"
         >
@@ -58,7 +58,11 @@ import TechBadge from "../TechBadge.astro";
     </div>
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Backend</h2>
-      <div class="flex ml-4 mt-2 flex-wrap" id="tech-kind" id="tech-kind">
+      <div
+        class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap"
+        id="tech-kind"
+        id="tech-kind"
+      >
         <TechBadge
           fromToVia="from-pink-500 via-red-500 to-yellow-500 dark:bg-gradient-to-r dark:from-emerald-500 dark:to-lime-600"
         >
@@ -83,7 +87,7 @@ import TechBadge from "../TechBadge.astro";
     </div>
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Database</h2>
-      <div class="flex ml-4 mt-2 flex-wrap" id="tech-kind">
+      <div class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap" id="tech-kind">
         <TechBadge>PostgreSQL</TechBadge>
         <TechBadge>MongoDB</TechBadge>
         <TechBadge>SQL Server</TechBadge>
@@ -92,7 +96,10 @@ import TechBadge from "../TechBadge.astro";
     </div>
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Low Level</h2>
-      <div class="flex ml-4 mt-2 flex-wrap p-0.5" id="tech-kind">
+      <div
+        class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap p-0.5"
+        id="tech-kind"
+      >
         <TechBadge
           fromToVia="bg-gradient-to-r from-pink-300 via-purple-300 to-indigo-400"
         >
@@ -117,7 +124,11 @@ import TechBadge from "../TechBadge.astro";
     </div>
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Mobile</h2>
-      <div class="flex ml-4 mt-2 flex-wrap" id="tech-kind" id="tech-kind">
+      <div
+        class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap"
+        id="tech-kind"
+        id="tech-kind"
+      >
         <TechBadge fromToVia="bg-gradient-to-b from-sky-400 to-sky-200">
           Dart
         </TechBadge>
