--- a/src/components/Cursor.astro
+++ b/src/components/Cursor.astro
@@ -76,9 +76,11 @@
 
     var cursor = document.querySelector(".cursor");
     var links = document.querySelectorAll("a");
+    var submitButtons = document.querySelectorAll('button[type="submit"]');
+    var combinedArray = [...links, ...submitButtons];
 
-    for (var i = 0; i < links.length; i++) {
-      var selfLink = links[i];
+    for (var i = 0; i < combinedArray.length; i++) {
+      var selfLink = combinedArray[i];
 
       selfLink.addEventListener("mouseover", function () {
         if (cursor === null) return;
