feat(navbar): :sparkles: Navbar move to a separate component and a special named slot

--- a/src/components/Navbar/HomeNavbar.astro
+++ b/src/components/Navbar/HomeNavbar.astro
@@ -23,7 +23,16 @@
         <a href="#tech" class="hover:text-text-950">Technologies</a>
         <a href="#projects" class="hover:text-text-950">Projects</a>
         <a href="#blog" class="hover:text-text-950">Blog</a>
-        <a href="#contact" class="hover:text-text-950">Contact me</a>
+        <a href="#contact" class="hover:text-text-950">Contact</a>
+      </div>
+      <div
+        class="h-full flex items-center shadow-background-900 transition-all hover:animate-jump ml-auto"
+      >
+        <a
+          href="/"
+          class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 mr-2 md:mr-1 tracking-tighter"
+          >TT</a
+        >
       </div>
     </div>
   </div>
