--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
 import Cursor from "../components/Cursor.astro";
-import Navbar from "../components/Navbar.astro";
 import "../styles/main.css";
 import "@fontsource/noto-sans";
 import BaseHead, {
@@ -9,12 +8,15 @@ import BaseHead, {
 } from "../components/Layout/BaseHead.astro";
 import SkipLink from "../components/Layout/SkipLink.astro";
 
-interface Props extends HeadProps {}
-const { ...head } = Astro.props;
+interface Props extends HeadProps {
+  class?: string;
+  bgClass?: string;
+}
+const { bgClass = "bg-transparent", ...head } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class:list={["", bgClass, Astro.props.class]}>
   <head>
     <BaseHead {...head} />
   </head>
@@ -23,13 +25,18 @@ const { ...head } = Astro.props;
     class="flex min-h-screen max-w-screen flex-col overflow-x-hidden text-text"
   >
     <SkipLink />
-    <Navbar />
+    <slot name="navbar" />
     <main class="min-h-screen container mx-auto scroll-smooth">
-      <span
-        class="hidden lg:inline-block fixed container top-16 h-3 rounded-none rounded-b-none border-t-[1px] border-0 border-text-800 z-50 opacity-0 transition-all"
-        id="border-top"></span>
+      {
+        Astro.slots.has("navbar") && (
+          <span
+            class="hidden lg:inline-block fixed container top-16 h-3 rounded-none rounded-b-none border-t-[1px] border-0 border-text-800 z-50 opacity-0 transition-all"
+            id="border-top"
+          />
+        )
+      }
       <slot />
-      <div class="w-full border-t border-text-950 pt-5 flex justify-center">
+      <div class="w-full border-t border-text-800 pt-5 flex justify-center">
         Made with <a
           href="https://astro.build/"
           target="_blank"
