feat: :lipstick: manejo de iconos

--- a/src/components/Home/Blog/BlogCard.astro
+++ b/src/components/Home/Blog/BlogCard.astro
@@ -52,7 +52,7 @@ if (imagePath && !images[imagePath])
     </div>
     <LinkButton
       link={"blogLink"}
-      icon="arrow-up-right"
+      icon="ph:arrow-up-right"
       iconClass="w-3 h-3 text-accent dark:text-emerald-500"
       class="bg-transparent dark:bg-transparent border-0 text-accent dark:text-emerald-500 shadow-none"
     >
