--- a/src/components/Navbar/BlogNavbar.astro
+++ b/src/components/Navbar/BlogNavbar.astro
@@ -19,12 +19,12 @@ import ThemeSwitch from "./ThemeSwitch.astro";
       <div
         class="col-span-1 row-span-1 h-full w-full flex items-center justify-center font-normal dark:font-semibold text-text-800 transition-colors duration-200 space-x-10"
       >
-        <a href="/#about" class="hover:text-text-950">Home</a>
+        <a href="/#whoami" class="hover:text-text-950">Whoami</a>
         <a href="/blog" class="hover:text-text-950">Blog</a>
         <a href="/#contact" class="hover:text-text-950">Contact</a>
       </div>
       <div
-        class="ml-5 h-full flex items-center shadow-background-900 transition-all hover:animate-jump"
+        class="ml-5 h-full flex items-center shadow-background-900 transition-all"
       >
         <ThemeSwitch />
       </div>
