--- a/src/components/Home/Blogs.astro
+++ b/src/components/Home/Blogs.astro
@@ -1,7 +1,5 @@
 ---
 import SectionHeader from "../SectionHeader.astro";
-import { Image } from "astro:assets";
-import LinkButton from "../LinkButton.astro";
 import BlogCard from "./Blog/BlogCard.astro";
 import { Icon } from "astro-icon/components";
 ---
@@ -35,10 +33,10 @@ import { Icon } from "astro-icon/components";
   <div
     class="absolute bottom-5 right-5 flex justify-end items-center group bg-background-100 rounded-lg px-3 shadow-lg border border-accent-500 dark:border-emerald-500"
   >
-    <a href="/blogs" class="text-lg text-text m-2"> Check All Post</a>
+    <a href="/blog" class="text-lg text-text m-2"> Check All Post</a>
 
     <span class="group-hover:translate-x-[4px] transition-all">
-      <Icon name="arrow-right" class="text-text w-4 h-4" /></span
+      <Icon name="ph:arrow-right" class="text-text w-4 h-4" /></span
     >
   </div>
 </section>
