--- a/src/components/Navbar/HomeNavbar.astro
+++ b/src/components/Navbar/HomeNavbar.astro
@@ -1,5 +1,5 @@
 ---
-
+import ThemeSwitch from "./ThemeSwitch.astro";
 ---
 
 <nav
@@ -19,20 +19,16 @@
       <div
         class="col-span-1 row-span-1 h-full flex items-center font-normal dark:font-semibold space-x-4 text-text-800 transition-colors duration-200"
       >
-        <a href="#about" class="hover:text-text-950">About</a>
+        <a href="#whoami" class="hover:text-text-950">Whoami</a>
         <a href="#tech" class="hover:text-text-950">Technologies</a>
         <a href="#projects" class="hover:text-text-950">Projects</a>
         <a href="#blog" class="hover:text-text-950">Blog</a>
         <a href="#contact" class="hover:text-text-950">Contact</a>
       </div>
       <div
-        class="h-full flex items-center shadow-background-900 transition-all hover:animate-jump ml-auto"
+        class="ml-auto h-full flex items-center shadow-background-900 transition-all"
       >
-        <a
-          href="/"
-          class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 mr-2 md:mr-1 tracking-tighter"
-          >TT</a
-        >
+        <ThemeSwitch />
       </div>
     </div>
   </div>
