--- a/src/components/Home/Contact/Contact.astro
+++ b/src/components/Home/Contact/Contact.astro
@@ -6,7 +6,7 @@ const { default: MeBust } = await import("/src/assets/me-bust.svg?raw");
 
 <section
   class="w-full max-w-full bg-transparent text-secondary-50 space-y-5 overflow-hidden pt-16"
-  id="projects"
+  id="contact"
   data-color="#d1eafa"
   data-color-dark="#051e2e"
 >
