--- a/src/components/Home/Contact/SocialButtons.astro
+++ b/src/components/Home/Contact/SocialButtons.astro
@@ -9,7 +9,7 @@
   target="_blank"
   data-twe-ripple-init
   data-twe-ripple-color="light"
-  class="mb-2 inline-block rounded bg-[#333] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
+  class="mb-2 inline-block rounded bg-black px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
 >
   <span class="[&>svg]:h-5 [&>svg]:w-6">
     <svg
