--- a/src/components/Home/About.astro
+++ b/src/components/Home/About.astro
@@ -5,7 +5,7 @@ import Hero from "./Hero.astro";
 <!-- background 100, background 100-->
 <section
   class="min-h-screen w-full flex flex-col-reverse lg:flex-row justify-between items-center lg:pl-6 lg:bg-background-50 bg-transparent lg:mb-5"
-  id="about"
+  id="whoami"
   data-color="#d1eafa"
   data-color-dark="#051e2e"
 >
