--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,12 @@ import Blog from "../components/Home/Blogs.astro";
 import Contact from "../components/Home/Contact/Contact.astro";
 import Projects from "../components/Home/Projects.astro";
 import Technologies from "../components/Home/Technologies.astro";
+import Navbar from "../components/Navbar/HomeNavbar.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Homepage" description="Valentin TT portfolio">
+  <Navbar slot="navbar" />
   <About />
   <Technologies />
   <Projects />
