style(home): :lipstick: fix styles in home and navbars

--- a/src/components/Navbar/BlogNavbar.astro
+++ b/src/components/Navbar/BlogNavbar.astro
@@ -24,7 +24,7 @@ import ThemeSwitch from "./ThemeSwitch.astro";
         <a href="/#contact" class="hover:text-text-950">Contact</a>
       </div>
       <div
-        class="ml-5 h-full flex items-center shadow-background-900 transition-all"
+        class="ml-5 mr-1 h-full flex items-center shadow-background-900 transition-all"
       >
         <ThemeSwitch />
       </div>
