--- a/src/components/Navbar/HomeNavbar.astro
+++ b/src/components/Navbar/HomeNavbar.astro
@@ -26,7 +26,7 @@ import ThemeSwitch from "./ThemeSwitch.astro";
         <a href="#contact" class="hover:text-text-950">Contact</a>
       </div>
       <div
-        class="ml-auto h-full flex items-center shadow-background-900 transition-all"
+        class="ml-auto mr-1 h-full flex items-center shadow-background-900 transition-all"
       >
         <ThemeSwitch />
       </div>
