--- a/src/components/Home/Technologies.astro
+++ b/src/components/Home/Technologies.astro
@@ -14,7 +14,7 @@ import TechBadge from "../TechBadge.astro";
   <div class="ml-4 mt-4 space-y-4">
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Frontend</h2>
-      <div class="flex mx-4 my-2 space-x-5 flex-wrap" id="tech-kind">
+      <div class="flex mx-4 my-2 flex-wrap" id="tech-kind">
         <TechBadge
           fromToVia="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600"
         >
@@ -59,7 +59,7 @@ import TechBadge from "../TechBadge.astro";
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Backend</h2>
       <div
-        class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap"
+        class="flex mx-4 my-2 ml-4 mt-2 flex-wrap"
         id="tech-kind"
         id="tech-kind"
       >
@@ -87,7 +87,7 @@ import TechBadge from "../TechBadge.astro";
     </div>
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Database</h2>
-      <div class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap" id="tech-kind">
+      <div class="flex mx-4 my-2 ml-4 mt-2 flex-wrap" id="tech-kind">
         <TechBadge>PostgreSQL</TechBadge>
         <TechBadge>MongoDB</TechBadge>
         <TechBadge>SQL Server</TechBadge>
@@ -96,10 +96,7 @@ import TechBadge from "../TechBadge.astro";
     </div>
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Low Level</h2>
-      <div
-        class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap p-0.5"
-        id="tech-kind"
-      >
+      <div class="flex mx-4 my-2 ml-4 mt-2 flex-wrap p-0.5" id="tech-kind">
         <TechBadge
           fromToVia="bg-gradient-to-r from-pink-300 via-purple-300 to-indigo-400"
         >
@@ -125,7 +122,7 @@ import TechBadge from "../TechBadge.astro";
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Mobile</h2>
       <div
-        class="flex mx-4 my-2 space-x-5 ml-4 mt-2 flex-wrap"
+        class="flex mx-4 my-2 ml-4 mt-2 flex-wrap"
         id="tech-kind"
         id="tech-kind"
       >
