--- a/src/components/TechBadge.astro
+++ b/src/components/TechBadge.astro
@@ -10,7 +10,7 @@ if (fromToVia === undefined)
 
 <h3
   class:list={[
-    "bg-gradient-to-r p-1 bg-[length:_400%_400%] animate-border [animation-duration:_4s] rounded-md backdrop-blur inline-block ",
+    "bg-gradient-to-r p-1 bg-[length:_400%_400%] animate-border [animation-duration:_4s] rounded-md backdrop-blur inline-block m-1",
     fromToVia,
   ]}
 >
