--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -33,7 +33,7 @@ const collapsedPages = collapseRange(page, pages);
   <ul class="flex items-center gap-4">
     {
       page.url.prev && (
-        <li class="prev rounded-full border border-white">
+        <li class="prev rounded-full border border-text-800">
           <a
             href={page.url.prev}
             data-astro-prefetch
@@ -55,17 +55,18 @@ const collapsedPages = collapseRange(page, pages);
         <li class="hidden sm:inline-block">
           {!link.href ? (
             <p>{link.text}</p>
+          ) : link.pageNum === page.currentPage ? (
+            <p
+              class="relative flex h-10 w-10 items-center justify-center rounded-md border transition-colors duration-150 border-text-800"
+              aria-current={"page"}
+            >
+              {link.pageNum}
+            </p>
           ) : (
             <a
               href={link.href}
-              class:list={[
-                "relative flex h-10 w-10 items-center justify-center rounded-md border border-transparent transition-colors duration-150",
-                link.pageNum !== page.currentPage &&
-                  "hover:border-white focus:border-white",
-              ]}
-              aria-current={
-                link.pageNum === page.currentPage ? "page" : undefined
-              }
+              class="relative flex h-10 w-10 items-center justify-center rounded-md border border-transparent transition-colors duration-150 hover:border-text-800 focus:border-text-800"
+              aria-current={undefined}
             >
               {link.pageNum}
             </a>
@@ -78,7 +79,7 @@ const collapsedPages = collapseRange(page, pages);
     </li>
     {
       page.url.next && (
-        <li class="next ease rounded-full border border-white transition-colors duration-150">
+        <li class="next ease rounded-full border border-text-800 transition-colors duration-150">
           <a
             href={page.url.next}
             data-astro-prefetch
