--- a/src/components/Navbar/BlogNavbar.astro
+++ b/src/components/Navbar/BlogNavbar.astro
@@ -1,32 +1,40 @@
 ---
+import CollapsibleMenu from "./CollapsibleMenu.astro";
 import ThemeSwitch from "./ThemeSwitch.astro";
 ---
 
 <nav
   class="fixed w-full top-0 left-0 px-0 sm:px-4 md:px-8 h-16 z-50 transition-all"
 >
-  <div class="relative container mx-auto h-full">
+  <div class="container mx-auto h-full">
     <div class="h-full flex items-center">
       <div
         class="mr-5 h-full flex items-center shadow-background-900 transition-all hover:animate-jump"
       >
         <a
           href="/"
-          class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 ml-2 md:ml-1 tracking-tighter"
+          class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 ml-2 md:ml-1 tracking-tighter s-12 text-center"
           >TT</a
         >
       </div>
       <div
-        class="col-span-1 row-span-1 h-full w-full flex items-center justify-center font-normal dark:font-semibold text-text-800 transition-colors duration-200 space-x-10"
+        class="col-span-1 row-span-1 h-full w-full items-center justify-center font-normal dark:font-semibold text-text-800 transition-colors duration-200 space-x-10 hidden md:flex"
       >
         <a href="/#whoami" class="hover:text-text-950">Whoami</a>
         <a href="/blog" class="hover:text-text-950">Blog</a>
         <a href="/#contact" class="hover:text-text-950">Contact</a>
       </div>
       <div
-        class="ml-5 mr-1 h-full flex items-center shadow-background-900 transition-all"
+        class="ml-5 mr-1 h-full hidden md:flex items-center shadow-background-900 transition-all"
       >
         <ThemeSwitch />
+      </div>
+      <div class="md:hidden ml-auto">
+        <CollapsibleMenu>
+          <a href="/#whoami" class="hover:text-text-950">Whoami</a>
+          <a href="/blog" class="hover:text-text-950">Blog</a>
+          <a href="/#contact" class="hover:text-text-950">Contact</a>
+        </CollapsibleMenu>
       </div>
     </div>
   </div>
@@ -34,6 +42,10 @@ import ThemeSwitch from "./ThemeSwitch.astro";
 
 <script>
   window.addEventListener("scroll", function () {
+    checkScroll();
+  });
+
+  function checkScroll() {
     const navbar = document.getElementsByTagName("nav")[0];
     // Check the scroll position
     if (window.scrollY > 30) {
@@ -42,9 +54,9 @@ import ThemeSwitch from "./ThemeSwitch.astro";
     } else {
       navbar.classList.remove("scrolled"); // Remove the class if scroll position is less than 50
     }
-  });
+  }
+  checkScroll();
 </script>
-
 <style>
   .scrolled {
     --tw-backdrop-blur: blur(12px);
