fix(blog): :lipstick: fix border sperator in blog generating overflow

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -87,7 +87,7 @@ const placeholderGradient = randomFromArray(gradients);
           {data.title}
         </h1>
       </header>
-      <hr class="-mx-16 my-8 border border-accent-50 lg:my-16" />
+      <hr class="mx-8 my-8 border border-primary-200 lg:my-16" />
       <article class="prose">
         <Content />
       </article>
