--- a/src/components/Navbar/HomeNavbar.astro
+++ b/src/components/Navbar/HomeNavbar.astro
@@ -20,7 +20,7 @@ import ThemeSwitch from "./ThemeSwitch.astro";
       <div
         class="col-span-1 row-span-1 h-full hidden md:flex items-center font-normal dark:font-semibold space-x-4 text-text-800 transition-colors duration-200"
       >
-        <a href="#whoami" class="hover:text-text-950">Whoami</a>
+        <a href="#about" class="hover:text-text-950">About</a>
         <a href="#tech" class="hover:text-text-950">Technologies</a>
         <a href="#projects" class="hover:text-text-950">Projects</a>
         <a href="#blog" class="hover:text-text-950">Blog</a>
@@ -33,7 +33,7 @@ import ThemeSwitch from "./ThemeSwitch.astro";
       </div>
       <div class="md:hidden ml-auto">
         <CollapsibleMenu>
-          <a href="#whoami" class="hover:text-text-950">Whoami</a>
+          <a href="#about" class="hover:text-text-950">About</a>
           <a href="#tech" class="hover:text-text-950">Technologies</a>
           <a href="#projects" class="hover:text-text-950">Projects</a>
           <a href="#blog" class="hover:text-text-950">Blog</a>
