--- a/src/components/Home/Blogs.astro
+++ b/src/components/Home/Blogs.astro
@@ -18,7 +18,7 @@ import { Icon } from "astro-icon/components";
         "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-500 via-red-500 to-yellow-500",
         "bg-[conic-gradient(var(--tw-gradient-stops))] from-accent-500 via-secondary-500 to-primary-500",
         "bg-[conic-gradient(var(--tw-gradient-stops))] from-green-300 via-blue-500 to-purple-600",
-        "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-300 via-purple-300 to-indigo-400",
+        // "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-300 via-purple-300 to-indigo-400",
       ].map((i) => {
         return (
           <BlogCard
